# pyanalysis

./: .gitignore  CLAUDE.md  Dockerfile  MANIFEST  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  pythonpackage.yml  release.yml
pyanalysis/: log_handler.py  logger.py  mail.py  moment.py  mysql.py
pyanalysis/database/: mysql.py  mysql_pool.py
pyanalysis/log/: handler.py  log.py  log_pool.py  logging.py
pyanalysis/mail/: attach.py  client.py
pyanalysis/mail_templates/: __init__.py  _styles.py  alert.py  base.py  notification.py  status.py  table.py
pyanalysis/mail_templates/_html/: status.html
pyanalysis/report/: report.py
pyanalysis/templates/: __init__.py  alert.py  base.py  notification.py  status.py  table.py
pyanalysis/templates/_html/: alert.html  base.html  notification.html  table.html
test/: README.md  log_handler.py  logger.py  mail.py  mail_preview.py  moment.py  mysql.py  mysql_integration.py  templates.py
test/database/: mysql_pool.py
test/log/: log.py  logging.py
